--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,51 @@
-name: CI/CD Pipeline Python
+# .github/workflows/main.yml
+name: Pruebas Python
 
 on:
   push:
     branches:
+      - main
       - Gonzalo
-      - Javier
+      - DEVJAVIER-QA
       - Yeiler
       - Maikel
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch: {}
+    
+
+  workflow_dispatch: {} 
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
     
+    # --- CONFIGURACIÓN DEL SERVICIO MYSQL ---
     services:
       mysql:
-        image: mysql:8.0
+        image: mysql:8.0 # Usa una imagen Docker de MySQL. Puedes usar otras versiones como mysql:5.7
         env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
-          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
-          MYSQL_USER: ${{ secrets.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }} # Contraseña para el usuario 'root' del MySQL en el CI
+          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }} # Nombre de tu base de datos de prueba
+          MYSQL_USER: ${{ secrets.MYSQL_USER }} # Usuario que usará tu aplicación
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }} # Contraseña para el usuario de tu aplicación
         ports:
-          - 3306:3306
-        options: >-
+          - 3306:3306 # Mapea el puerto del contenedor (3306) al host (VM de GitHub Actions, 3306)
+        options: >- # Opciones para el chequeo de salud del contenedor
           --health-cmd="mysqladmin ping -h 127.0.0.1"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=10
+    # ----------------------------------------
 
     steps:
     - uses: actions/checkout@v4
-    
     - name: Configurar Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
+        python-version: '3.12' # Asegúrate de que sea la versión correcta de Python
 
-    - name: Instalar dependencias del sistema
+    - name: Instalar dependencias del sistema para GUI
       run: |
         sudo apt-get update
-        sudo apt-get install -y libgl1 mesa-utils mysql-client
+        sudo apt-get install -y libgl1 mesa-utils mysql-client # mysql-client es necesario para interactuar con la BD
 
     - name: Instalar dependencias de Python
       run: |
@@ -52,6 +54,8 @@ jobs:
 
     - name: Esperar a que MySQL esté listo
       run: |
+        # Este script espera a que el servicio MySQL esté realmente disponible
+        # antes de intentar conectar o importar datos.
         for i in $(seq 1 30); do
           if mysql -h 127.0.0.1 -u${{ secrets.MYSQL_USER }} -p${{ secrets.MYSQL_PASSWORD }} -e "SELECT 1;" 2>/dev/null; then
             echo "MySQL está listo."
@@ -60,13 +64,14 @@ jobs:
           echo "Esperando a MySQL... ($i/30)"
           sleep 2
         done
+        # Si MySQL no está listo después de 60 segundos, fallará
         if [ $i -eq 30 ]; then
           echo "Error: MySQL no se inició a tiempo."
           exit 1
         fi
 
     - name: Importar base de datos desde backup SQL
-      env:
+      env: # Estas variables de entorno se usan solo en este paso
         DB_HOST: 127.0.0.1
         DB_USER: ${{ secrets.MYSQL_USER }}
         DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
@@ -76,11 +81,13 @@ jobs:
         
         if [ ! -f "$DB_BACKUP_FILE" ]; then
           echo "Error: El archivo de backup SQL '$DB_BACKUP_FILE' no se encontró en el repositorio."
+          echo "Asegúrate de que la ruta es correcta y el archivo está commiteado."
           exit 1
         fi
         
         echo "Importando '$DB_BACKUP_FILE' a la base de datos '${{ secrets.MYSQL_DATABASE }}'"
         mysql -h "${DB_HOST}" -u"${DB_USER}" -p"${DB_PASSWORD}" "${DB_DATABASE}" < "${DB_BACKUP_FILE}"
+        echo "Importación de base de datos completada."
 
     - name: Ejecutar Tests con Pytest
       env: 
@@ -89,9 +96,13 @@ jobs:
         DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
         DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       run: |
+        # aqui colocan el comando de prueba testing
         pytest tests/unitarias
         pytest tests/seguridad
 
+         # Si los tests pasaron y estamos en una de las ramas de trabajo,
+
+    
     - name: Ejecutar pruebas de carga con Locust
       env:
         DB_HOST: 127.0.0.1
@@ -100,7 +111,8 @@ jobs:
         DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       run: |
         mkdir -p output
-        locust -f tests/rendimiento/test_rendimiento_rol.py --headless -u 150 -r 10 --run-time 1m30s --csv=output/resultados
+        # aqui  colocan el comando de prueba de carga de locus con su archivo
+        locust -f tests/rendimiento --headless -u 150 -r 10 --run-time 1m --csv=output/resultados
 
     - name: Verificar errores en Locust
       run: |
@@ -112,7 +124,7 @@ jobs:
           echo "✅ No se encontraron errores en la prueba de carga."
         fi
 
-    - name: Validar rendimiento
+    - name: Validar rendimiento (tiempo promedio)
       run: |
         avg_response_time=$(awk -F',' '$1 ~ /Insertar Perfil/ {print $5}' output/resultados_stats.csv | tail -n1)
         echo "⏱ Tiempo promedio de 'Insertar Perfil': $avg_response_time ms"
@@ -121,83 +133,38 @@ jobs:
           exit 1
         fi
 
-    - name: Guardar resultados de pruebas
+    - name: Guardar resultados de Locust
       uses: actions/upload-artifact@v4
       with:
-        name: resultados-pruebas
+        name: resultados-locust
         path: output/
 
-  merge-and-deploy:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || success()
 
-    steps:
-    - name: Merge automático a MAIN desde rama activa
-      if: success()
+    # fusionamos automáticamente en main
+    - name: Auto-merge to main
+      if: >
+        success() &&
+        (
+          github.ref == 'refs/heads/Gonzalo' ||
+          github.ref == 'refs/heads/DEVJAVIER-QA' ||
+          github.ref == 'refs/heads/Yeiler' ||
+          github.ref == 'refs/heads/Maikel'
+        )
       uses: actions/github-script@v6
+      continue-on-error: true
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const sourceBranch = context.ref.replace('refs/heads/', '');
-          const targetBranch = 'main';
-
-          console.log(`Creando Pull Request de '${sourceBranch}' hacia '${targetBranch}'`);
-
-          const { data: pr } = await github.rest.pulls.create({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            title: `Merge automático ${sourceBranch} a ${targetBranch}`,
-            head: sourceBranch,
-            base: targetBranch,
-            body: 'Merge automático después de pruebas exitosas',
-            maintainer_can_modify: true
-          });
-
-          await github.rest.pulls.merge({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            pull_number: pr.number
-          });
-
-    - name: Enviar correo de éxito
-      if: success()
-      uses: dawidd6/action-send-mail@v3
-      with:
-        server_address: smtp.gmail.com
-        server_port: 465
-        username: ${{ secrets.EMAIL_USER }}
-        password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: '✅ Éxito en CI/CD - Merge completado'
-        body: 'Las pruebas fueron exitosas y el merge de Maikel a MAIN se completó correctamente.\n\nDetalles del workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
-        to: ${{ secrets.NOTIFICATION_EMAIL }}
-        from: GitHub Actions
-        content_type: text/plain
-
-    
-
-  notify-failure:
-    needs: build-and-test
-    if: failure()
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Descargar resultados de pruebas
-      uses: actions/download-artifact@v3
-      with:
-        name: resultados-pruebas
-
-    - name: Enviar correo de error
-      uses: dawidd6/action-send-mail@v3
-      with:
-        server_address: smtp.gmail.com
-        server_port: 465
-        username: ${{ secrets.EMAIL_USER }}
-        password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: '❌ Fallo en CI/CD - Pruebas no pasaron'
-        body: 'Las pruebas fallaron. Por favor revisa los detalles.\n\nDetalles del workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\n\nErrores encontrados:\n$(cat output/resultados_failures.csv 2>/dev/null || echo "No se encontró archivo de errores")'
-        to: ${{ secrets.NOTIFICATION_EMAIL }}
-        from: GitHub Actions
-        content_type: text/plain
-
-  
+          const branch = context.ref.replace('refs/heads/', '');
+          try {
+            console.log(`Merging '${branch}' into 'main'…`);
+            await github.rest.repos.merge({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              base: 'main',
+              head: branch
+            });
+            console.log(`✅ Merge ${branch} → main OK`);
+          } catch (error) {
+            console.log('⚠️ Merge conflict:', error.message);
+          }
