--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,13 +3,17 @@ name: CI/CD Pipeline Python
 on:
   push:
     branches:
-      - main
       - Gonzalo
-      - DEVJAVIER-QA
+      - Javier
       - Yeiler
-      - Maikel
-
+  pull_request:
+    branches:
+      - main
   workflow_dispatch: {}
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   build-and-test:
@@ -71,7 +75,7 @@ jobs:
         DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
         DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       run: |
-        DB_BACKUP_FILE="backup/accesobiometrico_v5.0.sql"
+        DB_BACKUP_FILE="backup/accesobiometrico_v5.1.sql"
         
         if [ ! -f "$DB_BACKUP_FILE" ]; then
           echo "Error: El archivo de backup SQL '$DB_BACKUP_FILE' no se encontró en el repositorio."
@@ -89,7 +93,7 @@ jobs:
         DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       run: |
         pytest tests/unitarias
-        pytest tests/seguridad
+        pytest tests/security
 
     - name: Ejecutar pruebas de carga con Locust
       env:
@@ -126,34 +130,36 @@ jobs:
         name: resultados-pruebas
         path: output/
 
-  # fusionamos automáticamente en main
+  merge-and-deploy:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      deployments: write
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        ref: 'main'
+        token: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Auto-merge to main
       if: >
         success() &&
-        (
-          github.ref == 'refs/heads/Gonzalo' ||
-          github.ref == 'refs/heads/DEVJAVIER-QA' ||
-          github.ref == 'refs/heads/Yeiler' ||
-          github.ref == 'refs/heads/Maikel'
-        )
+        (github.ref == 'refs/heads/Gonzalo' || github.ref == 'refs/heads/Javier' || github.ref == 'refs/heads/Yeiler')
       uses: actions/github-script@v6
-      continue-on-error: true
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const branch = context.ref.replace('refs/heads/', '');
-          try {
-            console.log(`Merging '${branch}' into 'main'…`);
-            await github.rest.repos.merge({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              base: 'main',
-              head: branch
-            });
-            console.log(`✅ Merge ${branch} → main OK`);
-          } catch (error) {
-            console.log('⚠️ Merge conflict:', error.message);
-          }
+          console.log(`Merging '${branch}' into 'main'…`);
+          await github.rest.repos.merge({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            base: 'main',
+            head: branch
+          });
 
     - name: Enviar correo de éxito
       if: success()
@@ -164,14 +170,47 @@ jobs:
         username: ${{ secrets.EMAIL_USER }}
         password: ${{ secrets.EMAIL_PASSWORD }}
         subject: '✅ Éxito en CI/CD - Merge completado'
-        body: 'Las pruebas fueron exitosas y el merge de Maikel a MAIN se completó correctamente.\n\nDetalles del workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+        body: 'Las pruebas fueron exitosas y el merge de DEV-QA a MAIN se completó correctamente.\n\nDetalles del workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
         to: ${{ secrets.NOTIFICATION_EMAIL }}
         from: GitHub Actions
-        content_type: text/plain
+
+    - name: Preparar archivos para despliegue
+      run: |
+        mkdir -p deploy
+        cp -r src/ deploy/
+        cp requirements.txt deploy/
+        # Agrega aquí otros archivos necesarios para producción
 
     - name: Desplegar a producción via FTP
-      if: success()
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: ./deploy/
+        server-dir: ${{ secrets.FTP_REMOTE_DIR }}
+        dangerous-clean-slate: true
+
+  notify-failure:
+    needs: build-and-test
+    if: failure()
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Descargar resultados de pruebas
+      uses: actions/download-artifact@v3
+      with:
+        name: resultados-pruebas
+
+    - name: Enviar correo de error
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: smtp.gmail.com
+        server_port: 465
+        username: ${{ secrets.EMAIL_USER }}
+        password: ${{ secrets.EMAIL_PASSWORD }}
+        subject: '❌ Fallo en CI/CD - Pruebas no pasaron'
+        body: 'Las pruebas fallaron. Por favor revisa los detalles.\n\nDetalles del workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\n\nErrores encontrados:\n$(cat output/resultados_failures.csv 2>/dev/null || echo "No se encontró archivo de errores")'
+        to: ${{ secrets.NOTIFICATION_EMAIL }}
+        from: GitHub Actions
+        content_type: text/plain
