--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -170,5 +170,46 @@ jobs:
           }
 
 
-          
+    - name: Enviar correo de éxito
+      if: success()
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: smtp.gmail.com
+        server_port: 465
+        username: ${{ secrets.EMAIL_USER }}
+        password: ${{ secrets.EMAIL_PASSWORD }}
+        subject: '✅ Éxito en CI/CD - Merge completado'
+        body: |
+          Las pruebas fueron exitosas y el merge de DEV-QA a MAIN se completó correctamente.
+          Detalles: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+        to: ${{ secrets.NOTIFICATION_EMAIL }}
+        from: GitHub Actions
+
+  notify-failure:
+    needs: build
+    if: failure()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Descargar resultados de pruebas
+        uses: actions/download-artifact@v3
+        with:
+          name: resultados-pruebas
+
+      - name: Enviar correo de error
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: ${{ secrets.EMAIL_USER }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: '❌ Fallo en CI/CD - Pruebas no pasaron'
+          body: |
+            Las pruebas fallaron. Por favor revisa los detalles.
+            Detalles: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+            Errores:
+            $(cat resultados-pruebas/resultados_failures.csv 2>/dev/null || echo "No se encontró archivo de errores")
+          to: ${{ secrets.NOTIFICATION_EMAIL }}
+          from: GitHub Actions
+
           
